[package]
name = "evo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = "0.12"
imgui = { version = "0.11.0" }
imgui-glow-renderer = { version = "0.11.0" }
imgui-sdl2-support = "0.11"
sdl2 = "0.34.5"
